--- a/to_do/Gemfile
+++ b/to_do/Gemfile
@@ -14,6 +14,10 @@ group :development, :test do
   gem 'pry'
 end
 
+group :test do
+  gem 'shoulda-matchers'
+end
+
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.2.3'
 # Use postgresql as the database for Active Record
